Bump asm version to be able to handle java 21 bytecode